portfolio url and favicon update

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img/home.png">
     <title>Taxi Website</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
      <!-- Box icons -->
@@ -189,7 +190,7 @@
             
             <div class="contact-box">
                 <h3>Links</h3>
-                <a href="https://my-portfolio-pi-dun-46.vercel.app">Our Portfolio</a>
+                <a href="https://basha-portfolio-blond.vercel.app/">Our Portfolio</a>
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
                 <a href="#">Login</a>
